config/k8s/deploy-frontend-radiodiagnosis-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: radiodiagnosis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        build-id: "BUILD_ID_PLACEHOLDER"
    spec:
      containers:
        - name: frontend
          image: docker.io/ardianhermawan17/frontend-radiodiagnosis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: radiodiagnosis
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
