config/k8s/frontend-radiodiagnosis-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: radiodiagnosis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/ardianhermawan17/frontend-radiodiagnosis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: radiodiagnosis
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
