config/k8s/ingress-frontend-radiodiagnosis-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-radiodiagnosis
  namespace: radiodiagnosis
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - radiodiagnosis.id
      secretName: frontend-radiodiagnosis-tls
  rules:
    - host: radiodiagnosis.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 443
